# test

./: README  README.txt  a.c  readme.txt
srcipt/: 1th.sh  init_factory.sh  package.ignore  package.sh  post_update.sh  template_install.sh  version.sh
yubot/devel/: .catkin  .rosinstall  setup.sh
yubot/devel/lib/pkgconfig/: rtc_pak.pc
yubot/devel/lib/rtc_pak/: client  json
yubot/devel/share/rtc_pak/cmake/: rtc_pakConfig.cmake
yubot/src/rtc_pak/: CMakeLists.txt
yubot/src/rtc_pak/include/gloox/: clientbase.h  message.h
yubot/src/rtc_pak/lib/gloox_lib/: libgloox.la
yubot/src/rtc_pak/lib/gloox_lib/pkgconfig/: gloox.pc
yubot/src/rtc_pak/src/: client.cpp  json.cpp  service.cpp
